Add GitHub links to DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,5 @@ RoxygenNote: 7.2.0
 Depends: 
     R (>= 2.10)
 LazyData: true
+URL: https://github.com/EmilHvitfeldt/elevators
+BugReports: https://github.com/EmilHvitfeldt/elevators/issues
